# last-mile

./: LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
demos/: RESULTS.md
demos/clawith/: analysis.md
demos/deerflow/: analysis.md
demos/hatchet/: demo-workflow.ts
demos/paperclip/: README.md
demos/symphony/: analysis.md
docs/: THINKING.md
docs/specs/: 2026-03-30-demo-comparison-plan.md  2026-03-30-framework-comparison.md  2026-03-30-implementation-plan.md  2026-03-30-last-mile-design.md  2026-03-30-last-mile-plan.md  2026-03-30-v2-redesign.md
hatchet-certs/: database.yaml  server.yaml
python/: .gitignore  pyproject.toml  requirements.txt  test_connection.py  test_pipeline.py
python/lastmile/: cli.py  config.py  display.py
python/lastmile/workflow/: gates.py  nodes.py  pipeline.py  state.py
python/src/: server.py
python/src/clawith/: client.py
python/src/workflow/: nodes.py  pipeline.py
python/tests/: test_scenario1_normal_flow.py  test_scenario2_gate_rejection.py  test_scenario3_rework.py  test_scenario4_fool.py  test_scenario5_exec_rework.py  test_scenario6_concurrent.py
src/: client.ts  gates.ts  worker.ts
src/cli/: score.ts
src/paperclip/: client.ts
src/workflows/: pipeline.ts
