[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lastmile"
version = "0.1.0"
description = "AI-native 软件开发流水线 CLI — 强制规划、链式验收、及时反馈"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "toml>=0.10.0",
]

[project.scripts]
lastmile = "lastmile.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lastmile"]
